--- a/emission.ui
+++ b/emission.ui
@@ -130,27 +130,36 @@ QTableWidget::Item{
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="AlternateBase">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>240</red>
+          <green>240</green>
+          <blue>240</blue>
          </color>
         </brush>
        </colorrole>
@@ -159,27 +168,36 @@ QTableWidget::Item{
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="AlternateBase">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>240</red>
+          <green>240</green>
+          <blue>240</blue>
          </color>
         </brush>
        </colorrole>
@@ -188,27 +206,36 @@ QTableWidget::Item{
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="AlternateBase">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>240</red>
+          <green>240</green>
+          <blue>240</blue>
          </color>
         </brush>
        </colorrole>
@@ -218,7 +245,7 @@ QTableWidget::Item{
     <property name="font">
      <font>
       <family>Arial</family>
-      <pointsize>10</pointsize>
+      <pointsize>-1</pointsize>
      </font>
     </property>
     <property name="focusPolicy">
@@ -228,7 +255,44 @@ QTableWidget::Item{
      <bool>true</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">background:#F1F1F1;
+     <string notr="true">/* Apply styles to the QTableWidget */
+QTableWidget {
+    border: 2px solid #2c3e50; /* Set border width to 4px */
+    alternate-background-color: #f0f0f0;
+    background-color: #FCFCFF;
+    font-family: &quot;Arial&quot;;
+    font-size: 12px;
+    border-radius: 20px;
+}
+
+/* Apply styles to the header of the QTableWidget */
+QHeaderView::section {
+   background-color: #15406e; /* Darker blue header background color */
+    color: white; /* Header text color */
+    padding: 5px 0; /* Adjust top and bottom padding */
+    border: 2px solid #2c3e50; /* Header border color */
+    border-top: none; /* Remove the top border */
+    border-bottom: none; /* Remove the bottom border */
+    border-radius: 0px;
+    border-width: 2px;
+}
+
+/* Apply styles to the items within the QTableWidget */
+QTableWidget::item {
+    padding: 5px; /* Item padding */
+    border: 1px solid #2c3e50; /* Item border color */
+}
+
+/* Apply styles to the even rows within the QTableWidget */
+QTableWidget::item:alternate {
+    background-color: #2c3e50; /* Darker blue even row background color */
+}
+
+/* Apply styles when an item is selected in the QTableWidget */
+QTableWidget::item:selected {
+    background-color: #3498db; /* Selected item background color (a slightly lighter blue) */
+    color: black; /* Selected item text color */
+}
 </string>
     </property>
     <property name="frameShape">
@@ -2402,6 +2466,24 @@ QPushButton:checked {
       <height>471</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+    background-color: transparent; 
+    color: black;
+    border: 3px solid#EBF1F4 ;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-weight: bold;
+    font-family: Calibri, sans-serif;
+}
+
+/* Hover effect */
+QPushButton:hover {
+  
+    border: 3px solid #141E46;
+    color: black;
+}</string>
+    </property>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
@@ -2438,16 +2520,28 @@ QPushButton:checked {
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">QLineEdit {
+      <string notr="true">/* Styles for QLineEdit */
+QLineEdit {
     border: 2px solid #141E46;
     border-radius: 10px;
     padding: 5px;
+    transition: border-color 0.3s; /* Adding transition effect for smooth hover */
 }
 
+QLineEdit:hover {
+    border-color: #E0E0E1; /* Change border color on hover */
+}
+
+/* Styles for QTextEdit */
 QTextEdit {
     border: 2px solid #141E46;
     border-radius: 10px;
     padding: 1.5px;
+    transition: border-color 0.3s; /* Adding transition effect for smooth hover */
+}
+
+QTextEdit:hover {
+    border-color: #E0E0E1; /* Change border color on hover */
 }
 </string>
      </property>
@@ -2479,16 +2573,28 @@ QTextEdit {
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">QLineEdit {
+      <string notr="true">/* Styles for QLineEdit */
+QLineEdit {
     border: 2px solid #141E46;
     border-radius: 10px;
     padding: 5px;
+    transition: border-color 0.3s; /* Adding transition effect for smooth hover */
 }
 
+QLineEdit:hover {
+    border-color: #E0E0E1; /* Change border color on hover */
+}
+
+/* Styles for QTextEdit */
 QTextEdit {
     border: 2px solid #141E46;
     border-radius: 10px;
     padding: 1.5px;
+    transition: border-color 0.3s; /* Adding transition effect for smooth hover */
+}
+
+QTextEdit:hover {
+    border-color: #E0E0E1; /* Change border color on hover */
 }
 </string>
      </property>
@@ -2559,6 +2665,24 @@ QTextEdit {
        <width>151</width>
        <height>34</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton {
+    background-color: transparent; 
+    color: black;
+    border: 3px solid#EBF1F4 ;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-weight: bold;
+    font-family: Calibri, sans-serif;
+}
+
+/* Hover effect */
+QPushButton:hover {
+  
+    border: 3px solid #141E46;
+    color: black;
+}</string>
      </property>
      <property name="text">
       <string>Add</string>
@@ -2658,6 +2782,41 @@ QTextEdit {
        <width>181</width>
        <height>22</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">/* Styles for QComboBox */
+QComboBox {
+    border: 2px solid #141E46; /* Border color */
+    border-radius: 10px; /* Border radius */
+    padding: 5px; /* Padding */
+    min-width: 50px; /* Minimum width */
+    selection-background-color: #EBF1F4; /* Background color when item is selected */
+    background-color: white; /* Default background color */
+    color: black; /* Text color */
+}
+
+QComboBox:hover {
+    border-color: #EBF1F4; /* Border color on hover */
+}
+
+QComboBox::drop-down {
+    subcontrol-origin: padding; /* Positioning origin of the drop-down arrow */
+    subcontrol-position: right; /* Position of the drop-down arrow */
+    width: 20px; /* Width of the drop-down arrow */
+    border-left: 2px solid #141E46; /* Left border color of the drop-down arrow */
+}
+
+
+/* Styles for QComboBox items */
+QComboBox::item {
+    padding: 5px; /* Padding for each item */
+}
+
+QComboBox::item:selected {
+    background-color: #EBF1F4; /* Background color for selected item */
+    color: black; /* Text color for selected item */
+}
+</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="script">
