--- a/employee.ui
+++ b/employee.ui
@@ -492,27 +492,36 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="AlternateBase">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>240</red>
+          <green>240</green>
+          <blue>240</blue>
          </color>
         </brush>
        </colorrole>
@@ -521,27 +530,36 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="AlternateBase">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>240</red>
+          <green>240</green>
+          <blue>240</blue>
          </color>
         </brush>
        </colorrole>
@@ -550,27 +568,36 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>241</red>
-          <green>241</green>
-          <blue>241</blue>
+          <red>252</red>
+          <green>252</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="AlternateBase">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>240</red>
+          <green>240</green>
+          <blue>240</blue>
          </color>
         </brush>
        </colorrole>
@@ -579,8 +606,8 @@
     </property>
     <property name="font">
      <font>
-      <family>黑体</family>
-      <pointsize>10</pointsize>
+      <family>Arial</family>
+      <pointsize>-1</pointsize>
      </font>
     </property>
     <property name="focusPolicy">
@@ -590,7 +617,45 @@
      <bool>true</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: #f1f1f1;</string>
+     <string notr="true">/* Apply styles to the QTableWidget */
+QTableWidget {
+    border: 2px solid #2c3e50; /* Set border width to 4px */
+    alternate-background-color: #f0f0f0;
+    background-color: #FCFCFF;
+    font-family: &quot;Arial&quot;;
+    font-size: 12px;
+    border-radius: 20px;
+}
+
+/* Apply styles to the header of the QTableWidget */
+QHeaderView::section {
+   background-color: #15406e; /* Darker blue header background color */
+    color: white; /* Header text color */
+    padding: 5px 0; /* Adjust top and bottom padding */
+    border: 2px solid #2c3e50; /* Header border color */
+    border-top: none; /* Remove the top border */
+    border-bottom: none; /* Remove the bottom border */
+    border-radius: 0px;
+    border-width: 2px;
+}
+
+/* Apply styles to the items within the QTableWidget */
+QTableWidget::item {
+    padding: 5px; /* Item padding */
+    border: 1px solid #2c3e50; /* Item border color */
+}
+
+/* Apply styles to the even rows within the QTableWidget */
+QTableWidget::item:alternate {
+    background-color: #2c3e50; /* Darker blue even row background color */
+}
+
+/* Apply styles when an item is selected in the QTableWidget */
+QTableWidget::item:selected {
+    background-color: #3498db; /* Selected item background color (a slightly lighter blue) */
+    color: black; /* Selected item text color */
+}
+</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
@@ -1857,18 +1922,45 @@ QLineEdit:focus {
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QLineEdit {
+     <string notr="true">/* Styles for QLineEdit */
+QLineEdit {
     border: 2px solid #141E46;
     border-radius: 10px;
     padding: 5px;
+    transition: border-color 0.3s; /* Adding transition effect for smooth hover */
 }
 
+QLineEdit:hover {
+    border-color: #E0E0E1; /* Change border color on hover */
+}
+
+/* Styles for QTextEdit */
 QTextEdit {
     border: 2px solid #141E46;
     border-radius: 10px;
     padding: 1.5px;
+    transition: border-color 0.3s; /* Adding transition effect for smooth hover */
 }
-</string>
+
+QTextEdit:hover {
+    border-color: #E0E0E1; /* Change border color on hover */
+}
+QPushButton {
+    background-color: transparent; 
+    color: black;
+    border: 3px solid#EBF1F4 ;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-weight: bold;
+    font-family: Calibri, sans-serif;
+}
+
+/* Hover effect */
+QPushButton:hover {
+  
+    border: 3px solid #141E46;
+    color: black;
+}</string>
     </property>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
@@ -1906,16 +1998,28 @@ QTextEdit {
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">QLineEdit {
+      <string notr="true">/* Styles for QLineEdit */
+QLineEdit {
     border: 2px solid #141E46;
     border-radius: 10px;
     padding: 5px;
+    transition: border-color 0.3s; /* Adding transition effect for smooth hover */
 }
 
+QLineEdit:hover {
+    border-color: #E0E0E1; /* Change border color on hover */
+}
+
+/* Styles for QTextEdit */
 QTextEdit {
     border: 2px solid #141E46;
     border-radius: 10px;
     padding: 1.5px;
+    transition: border-color 0.3s; /* Adding transition effect for smooth hover */
+}
+
+QTextEdit:hover {
+    border-color: #E0E0E1; /* Change border color on hover */
 }
 </string>
      </property>
@@ -1947,16 +2051,28 @@ QTextEdit {
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">QLineEdit {
+      <string notr="true">/* Styles for QLineEdit */
+QLineEdit {
     border: 2px solid #141E46;
     border-radius: 10px;
     padding: 5px;
+    transition: border-color 0.3s; /* Adding transition effect for smooth hover */
 }
 
+QLineEdit:hover {
+    border-color: #E0E0E1; /* Change border color on hover */
+}
+
+/* Styles for QTextEdit */
 QTextEdit {
     border: 2px solid #141E46;
     border-radius: 10px;
     padding: 1.5px;
+    transition: border-color 0.3s; /* Adding transition effect for smooth hover */
+}
+
+QTextEdit:hover {
+    border-color: #E0E0E1; /* Change border color on hover */
 }
 </string>
      </property>
@@ -2104,6 +2220,9 @@ QTextEdit {
        <height>22</height>
       </rect>
      </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
     </widget>
     <widget class="QLabel" name="label_12">
      <property name="geometry">
@@ -2124,8 +2243,46 @@ QTextEdit {
        <x>10</x>
        <y>220</y>
        <width>181</width>
-       <height>22</height>
+       <height>25</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">/* Styles for QComboBox */
+QComboBox {
+    border: 2px solid #141E46; /* Border color */
+    border-radius: 10px; /* Border radius */
+    padding: 5px; /* Padding */
+    min-width: 100px; /* Minimum width */
+    selection-background-color: #EBF1F4; /* Background color when item is selected */
+    background-color: white; /* Default background color */
+    color: black; /* Text color */
+}
+
+QComboBox:hover {
+    border-color: #EBF1F4; /* Border color on hover */
+}
+
+QComboBox::drop-down {
+    subcontrol-origin: padding; /* Positioning origin of the drop-down arrow */
+    subcontrol-position: right; /* Position of the drop-down arrow */
+    width: 20px; /* Width of the drop-down arrow */
+    border-left: 2px solid #141E46; /* Left border color of the drop-down arrow */
+}
+
+QComboBox::down-arrow {
+    image: url(down_arrow.png); /* Image for the drop-down arrow */
+}
+
+/* Styles for QComboBox items */
+QComboBox::item {
+    padding: 5px; /* Padding for each item */
+}
+
+QComboBox::item:selected {
+    background-color: #EBF1F4; /* Background color for selected item */
+    color: black; /* Text color for selected item */
+}
+</string>
      </property>
      <item>
       <property name="text">
@@ -2144,8 +2301,46 @@ QTextEdit {
        <x>10</x>
        <y>270</y>
        <width>181</width>
-       <height>22</height>
+       <height>25</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">/* Styles for QComboBox */
+QComboBox {
+    border: 2px solid #141E46; /* Border color */
+    border-radius: 10px; /* Border radius */
+    padding: 5px; /* Padding */
+    min-width: 100px; /* Minimum width */
+    selection-background-color: #EBF1F4; /* Background color when item is selected */
+    background-color: white; /* Default background color */
+    color: black; /* Text color */
+}
+
+QComboBox:hover {
+    border-color: #EBF1F4; /* Border color on hover */
+}
+
+QComboBox::drop-down {
+    subcontrol-origin: padding; /* Positioning origin of the drop-down arrow */
+    subcontrol-position: right; /* Position of the drop-down arrow */
+    width: 20px; /* Width of the drop-down arrow */
+    border-left: 2px solid #141E46; /* Left border color of the drop-down arrow */
+}
+
+QComboBox::down-arrow {
+    image: url(down_arrow.png); /* Image for the drop-down arrow */
+}
+
+/* Styles for QComboBox items */
+QComboBox::item {
+    padding: 5px; /* Padding for each item */
+}
+
+QComboBox::item:selected {
+    background-color: #EBF1F4; /* Background color for selected item */
+    color: black; /* Text color for selected item */
+}
+</string>
      </property>
      <item>
       <property name="text">
@@ -2314,10 +2509,10 @@ QTextEdit {
         </colorrole>
         <colorrole role="Button">
          <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>47</red>
-           <green>59</green>
-           <blue>82</blue>
+          <color alpha="0">
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
@@ -2386,19 +2581,19 @@ QTextEdit {
         </colorrole>
         <colorrole role="Base">
          <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>47</red>
-           <green>59</green>
-           <blue>82</blue>
+          <color alpha="0">
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
         <colorrole role="Window">
          <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>47</red>
-           <green>59</green>
-           <blue>82</blue>
+          <color alpha="0">
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
@@ -2460,10 +2655,10 @@ QTextEdit {
         </colorrole>
         <colorrole role="Button">
          <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>47</red>
-           <green>59</green>
-           <blue>82</blue>
+          <color alpha="0">
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
@@ -2532,19 +2727,19 @@ QTextEdit {
         </colorrole>
         <colorrole role="Base">
          <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>47</red>
-           <green>59</green>
-           <blue>82</blue>
+          <color alpha="0">
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
         <colorrole role="Window">
          <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>47</red>
-           <green>59</green>
-           <blue>82</blue>
+          <color alpha="0">
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
@@ -2598,18 +2793,18 @@ QTextEdit {
         <colorrole role="WindowText">
          <brush brushstyle="SolidPattern">
           <color alpha="255">
-           <red>127</red>
-           <green>127</green>
-           <blue>127</blue>
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
         <colorrole role="Button">
          <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>47</red>
-           <green>59</green>
-           <blue>82</blue>
+          <color alpha="0">
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
@@ -2652,9 +2847,9 @@ QTextEdit {
         <colorrole role="Text">
          <brush brushstyle="SolidPattern">
           <color alpha="255">
-           <red>127</red>
-           <green>127</green>
-           <blue>127</blue>
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
@@ -2670,27 +2865,27 @@ QTextEdit {
         <colorrole role="ButtonText">
          <brush brushstyle="SolidPattern">
           <color alpha="255">
-           <red>127</red>
-           <green>127</green>
-           <blue>127</blue>
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
         <colorrole role="Base">
          <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>47</red>
-           <green>59</green>
-           <blue>82</blue>
+          <color alpha="0">
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
         <colorrole role="Window">
          <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>47</red>
-           <green>59</green>
-           <blue>82</blue>
+          <color alpha="0">
+           <red>0</red>
+           <green>0</green>
+           <blue>0</blue>
           </color>
          </brush>
         </colorrole>
