--- a/affectation.ui
+++ b/affectation.ui
@@ -13,23 +13,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QDialogButtonBox" name="buttonBox">
-   <property name="geometry">
-    <rect>
-     <x>470</x>
-     <y>610</y>
-     <width>171</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
-  <widget class="QTableWidget" name="tableWidget">
+  <widget class="QListWidget" name="listWidget">
    <property name="geometry">
     <rect>
      <x>60</x>
@@ -39,7 +23,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QTableWidget" name="tableWidget_2">
+  <widget class="QListWidget" name="listWidget_2">
    <property name="geometry">
     <rect>
      <x>580</x>
@@ -49,75 +33,11 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="search_input">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>70</y>
-     <width>242</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLineEdit {
-    background-color: #FFFFFF; /* Background color */
-    border: 2px solid #CCCCCC; /* Border color */
-    border-radius: 5px; /* Border radius */
-    padding: 7px 10px; /* Padding */
-    font-size: 14px; /* Font size */
-    color: #333333; /* Text color */
-}
-
-QLineEdit:hover {
-    border-color: #999999; /* Border color on hover */
-}
-
-QLineEdit:focus {
-    border-color: #0078D4; /* Border color when focused */
-}
-</string>
-   </property>
-   <property name="placeholderText">
-    <string>Search...</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="search_input_2">
-   <property name="geometry">
-    <rect>
-     <x>710</x>
-     <y>70</y>
-     <width>242</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLineEdit {
-    background-color: #FFFFFF; /* Background color */
-    border: 2px solid #CCCCCC; /* Border color */
-    border-radius: 5px; /* Border radius */
-    padding: 7px 10px; /* Padding */
-    font-size: 14px; /* Font size */
-    color: #333333; /* Text color */
-}
-
-QLineEdit:hover {
-    border-color: #999999; /* Border color on hover */
-}
-
-QLineEdit:focus {
-    border-color: #0078D4; /* Border color when focused */
-}
-</string>
-   </property>
-   <property name="placeholderText">
-    <string>Search...</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>30</y>
+     <x>240</x>
+     <y>70</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -129,8 +49,8 @@ QLineEdit:focus {
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>40</y>
+     <x>800</x>
+     <y>80</y>
      <width>71</width>
      <height>21</height>
     </rect>
@@ -139,40 +59,20 @@ QLineEdit:focus {
     <string>Equipments</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>510</x>
+     <y>610</y>
+     <width>93</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Affecter</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>accepted()</signal>
-   <receiver>Affectation</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>157</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>rejected()</signal>
-   <receiver>Affectation</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>286</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
