--- a/forgotpassword.ui
+++ b/forgotpassword.ui
@@ -78,8 +78,40 @@
      <x>190</x>
      <y>240</y>
      <width>191</width>
-     <height>31</height>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+    background-color: transparent; 
+    color: black;
+
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-weight: bold;
+    font-family: Calibri, sans-serif;
+}
+
+/* Hover effect */
+QPushButton:hover {
+  
+    border: 3px solid #141E46;
+    color: black;
+}
+
+/* Pressed effect */
+QPushButton:pressed {
+    background-color: #141E46;
+    border: 2px solid #141E46;
+    padding: 9px 19px;
+    color: white;
+}
+
+/* Checked effect */
+QPushButton:checked {
+    background-color: #64a1c2; /* Your desired color */
+    border: none; /* Remove the border if needed */
+}</string>
    </property>
    <property name="text">
     <string>Recieve Password</string>
