--- a/emission.ui
+++ b/emission.ui
@@ -574,12 +574,12 @@ QPushButton:hover {
       </size>
      </property>
     </widget>
-    <widget class="QTimeEdit" name="dateEdit">
+    <widget class="QDateEdit" name="dateEdit">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>180</y>
-       <width>118</width>
+       <x>10</x>
+       <y>170</y>
+       <width>110</width>
        <height>22</height>
       </rect>
      </property>
