--- a/sponsor.ui
+++ b/sponsor.ui
@@ -470,7 +470,7 @@
   <widget class="QLabel" name="title_label">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>500</x>
      <y>0</y>
      <width>521</width>
      <height>49</height>
@@ -485,7 +485,7 @@
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: white </string>
+    <string notr="true">color: SOLIDBLZCK</string>
    </property>
    <property name="text">
     <string>Liste des sponsors</string>
@@ -1581,7 +1581,7 @@ QTextEdit:hover {
      <rect>
       <x>10</x>
       <y>80</y>
-      <width>48</width>
+      <width>81</width>
       <height>16</height>
      </rect>
     </property>
@@ -1634,7 +1634,7 @@ QTextEdit:hover {
      <rect>
       <x>10</x>
       <y>150</y>
-      <width>26</width>
+      <width>51</width>
       <height>16</height>
      </rect>
     </property>
@@ -1649,9 +1649,9 @@ QTextEdit:hover {
     <property name="geometry">
      <rect>
       <x>9</x>
-      <y>249</y>
+      <y>243</y>
       <width>191</width>
-      <height>25</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -1716,7 +1716,7 @@ QComboBox::item:selected {
      <rect>
       <x>10</x>
       <y>220</y>
-      <width>50</width>
+      <width>71</width>
       <height>16</height>
      </rect>
     </property>
@@ -1737,9 +1737,9 @@ QComboBox::item:selected {
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>310</y>
+      <y>303</y>
       <width>151</width>
-      <height>34</height>
+      <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
